--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -17,7 +17,6 @@
   ~
   -->
 
-<animated-rotate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:drawable="@drawable/loading_img"
-    android:pivotX="50%"
-    android:pivotY="50%" />
+<resources>
+    <item name="mars_property_tag" type="id"/>
+</resources>
