--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,9 @@
   -->
 
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#b71c1c</color>
+    <color name="colorPrimaryDark">#801313</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="colorBackground">#424242</color>
 </resources>
