--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -11,15 +11,23 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:layout_height="wrap_content">
+
+        <View
+            android:id="@+id/view2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorAccent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/img"
             srcOf="@{ model.property }"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:scaleType="centerCrop"
             app:layout_constrainedHeight="true"
             app:layout_constrainedWidth="true"
@@ -27,7 +35,7 @@
             app:layout_constraintHeight_min="200dp"
             app:layout_constraintHeight_percent=".6"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/type"
+            app:layout_constraintTop_toTopOf="parent"
             tools:src="@tools:sample/backgrounds/scenic" />
 
         <TextView
@@ -36,19 +44,19 @@
             android:layout_height="wrap_content"
             android:text="@{ @string/display_type(model.isRental ? @string/type_rent : @string/type_sale) }"
             android:textSize="24sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBaseline_toBaselineOf="@+id/price"
+            app:layout_constraintStart_toStartOf="@+id/img"
             tools:text="@string/type_rent" />
 
         <TextView
             android:id="@+id/price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:text="@{model.isRental ? @string/display_price_monthly_rental(model.price/10000) : @string/display_price(model.price) }"
             android:textColor="@color/colorAccent"
             android:textSize="30sp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/img"
             app:layout_constraintTop_toBottomOf="@+id/img"
             tools:text="$100,000" />
 
