--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,21 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:windowBackground">@color/colorBackground</item>
+
+        <item name="actionOverflowButtonStyle">@style/actionbarOverflowButton</item>
+        <item name="snackbarStyle">@style/snackbar</item>
+    </style>
+
+    <style name="actionbarOverflowButton" parent="Widget.AppCompat.ActionButton.Overflow">
+        <item name="android:contentDescription"/>
+    </style>
+
+    <style name="snackbar" parent="Widget.MaterialComponents.Snackbar">
+        <item name="android:layout_margin"/>
+        <item name="android:layout_marginTop">@dimen/snackbar_margin_horizontal</item>
+        <item name="android:layout_marginBottom">@dimen/snackbar_margin_horizontal</item>
+        <item name="android:layout_marginStart">@dimen/snackbar_margin_vertical</item>
+        <item name="android:layout_marginEnd">@dimen/snackbar_margin_vertical</item>
     </style>
 
 </resources>
