--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -3,63 +3,136 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="maxeem.america.mars.DetailsFragment">
+    tools:context="maxeem.america.mars.fragment.DetailsFragment">
 
     <data>
-        <variable name="model" type="maxeem.america.mars.DetailsModel" />
+        <variable name="model" type="maxeem.america.mars.model.DetailsModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <View
-            android:id="@+id/view2"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar"
+            app:liftOnScroll="true"
+            android:background="@color/primaryDark"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorAccent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/img"
-            srcOf="@{ model.property }"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:scaleType="centerCrop"
-            app:layout_constrainedHeight="true"
-            app:layout_constrainedWidth="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_min="200dp"
-            app:layout_constraintHeight_percent=".6"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/backgrounds/scenic" />
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/col_toolbar"
+                app:expandedTitleTextAppearance="@style/ExpandedTitleTextAppearance"
+                app:collapsedTitleTextAppearance="@style/CollapsedTitleTextAppearance"
+                app:title="@{ @string/display_type(model.isRental ? @string/type_rent : @string/type_sale) }"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                app:expandedTitleGravity="bottom"
+                app:expandedTitleMarginStart="16dp"
+                app:expandedTitleMarginBottom="20dp"
+                app:collapsedTitleGravity="start"
+                app:contentScrim="@color/appbar_scrim"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
-        <TextView
-            android:id="@+id/type"
+                <ImageView
+                    android:id="@+id/img"
+                    srcOf="@{ model.property }"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax"
+                    app:layout_collapseParallaxMultiplier=".5"
+                    tools:src="@tools:sample/backgrounds/scenic" />
+
+                <com.google.android.material.appbar.MaterialToolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    app:layout_collapseMode="pin" />
+
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:layout_anchor="@id/appbar"
+            app:layout_anchorGravity="bottom">
+
+            <RelativeLayout
+                android:id="@+id/actions"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:background="@color/primaryDark"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="8dp"
+                android:paddingStart="16dp"
+                android:paddingTop="8dp"
+                android:paddingEnd="16dp"
+                android:paddingBottom="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/price"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:text="@{ model.isRental ? @string/display_price_monthly_rental(model.price/10000) : @string/display_price(model.price) }"
+                    android:textColor="@color/primary"
+                    app:autoSizeTextType="uniform"
+                    tools:text="$100,000" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:text="@string/action_order" />
+
+            </RelativeLayout>
+
+            <androidx.core.widget.NestedScrollView
+                android:id="@+id/scroll"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:fadingEdgeLength="45dp"
+                android:requiresFadingEdge="vertical"
+                android:scrollbarStyle="insideOverlay"
+                android:scrollbars="vertical"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/actions"
+                app:layout_constraintBottom_toBottomOf="parent">
+
+                <TextView
+                    android:id="@+id/description"
+                    textHtml="@{ model.description }"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:textColor="@color/description"
+                    android:textSize="@dimen/text"
+                    tools:text="@tools:sample/lorem/random"
+                    android:layout_marginBottom="100dp"/>
+
+            </androidx.core.widget.NestedScrollView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{ @string/display_type(model.isRental ? @string/type_rent : @string/type_sale) }"
-            android:textSize="24sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/price"
-            app:layout_constraintStart_toStartOf="@+id/img"
-            tools:text="@string/type_rent" />
+            android:src="@drawable/fab_call"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="24dp"
+            app:useCompatPadding="true" />
 
-        <TextView
-            android:id="@+id/price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@{model.isRental ? @string/display_price_monthly_rental(model.price/10000) : @string/display_price(model.price) }"
-            android:textColor="@color/colorAccent"
-            android:textSize="30sp"
-            app:layout_constraintEnd_toEndOf="@+id/img"
-            app:layout_constraintTop_toBottomOf="@+id/img"
-            tools:text="$100,000" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </layout>
