--- a/app/src/main/res/menu/tabs.xml
+++ b/app/src/main/res/menu/tabs.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/tab_all"
+        android:icon="@drawable/tab_all"
+        android:title="@string/tab_all" />
     <item android:id="@+id/tab_sale"
         android:icon="@drawable/tab_sale"
         android:title="@string/tab_sale" />
-    <item android:id="@+id/tab_call"
-        android:enabled="false"
-        android:title="@string/call_us" />
     <item android:id="@+id/tab_rent"
         android:icon="@drawable/tab_rent"
         android:title="@string/tab_rent" />
