--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,22 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!--
-  ~ Copyright 2018, The Android Open Source Project
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy factoryOf the License at
-  ~
-  ~     http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  ~
-  -->
-
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -25,7 +8,7 @@
 
     <fragment
         android:id="@+id/listingFragment"
-        android:name="maxeem.america.mars.ListingFragment"
+        android:name="maxeem.america.mars.fragment.ListingFragment"
         tools:layout="@layout/fragment_listing">
         <action
             android:id="@+id/showDetails"
@@ -34,11 +17,21 @@
 
     <fragment
         android:id="@+id/detailsFragment"
-        android:name="maxeem.america.mars.DetailsFragment"
+        android:name="maxeem.america.mars.fragment.DetailsFragment"
         tools:layout="@layout/fragment_details">
         <argument
             android:name="property"
             app:argType="maxeem.america.mars.api.MarsProperty" />
     </fragment>
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="maxeem.america.mars.fragment.AboutFragment"
+        tools:layout="@layout/fragment_about" >
+        <action
+            android:id="@+id/action_aboutFragment_pop"
+            app:popUpTo="@id/aboutFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <action android:id="@+id/action_global_aboutFragment" app:destination="@id/aboutFragment" />
 
 </navigation>
