--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
-    <dimen name="snackbar_margin_horizontal">10dp</dimen>
-    <dimen name="snackbar_margin_vertical">30dp</dimen>
+    <dimen name="snackbar_margin_vertical">10dp</dimen>
+    <dimen name="snackbar_margin_horizontal">30dp</dimen>
+    <dimen name="text_item">13sp</dimen>
+    <dimen name="text_small">14sp</dimen>
+    <dimen name="text">16sp</dimen>
+    <dimen name="text_large">18sp</dimen>
+    <dimen name="text_name">30sp</dimen>
 </resources>
