--- a/app/src/main/res/layout/fragment_listing.xml
+++ b/app/src/main/res/layout/fragment_listing.xml
@@ -34,6 +34,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
+            <View android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/primaryVariant"/>
+
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
