--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -160,6 +160,19 @@
             app:layout_constraintStart_toStartOf="@+id/well_start"
             app:layout_constraintTop_toBottomOf="@+id/description" />
 
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/demo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:alpha=".3"
+            android:text="@{ maxeem.america.mars.MarsApp.BUILD }"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            android:textColor="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="DEMO" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
