--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -7,6 +7,7 @@
 
     <data>
         <variable name="model" type="maxeem.america.mars.model.DetailsModel" />
+        <import type="maxeem.america.mars.MarsApp"/>
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -43,6 +44,20 @@
                     app:layout_collapseMode="parallax"
                     app:layout_collapseParallaxMultiplier=".5"
                     tools:src="@tools:sample/backgrounds/scenic" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/demo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{ maxeem.america.mars.MarsApp.BUILD }"
+                    tools:text="DEMO"
+                    android:textColor="@android:color/black"
+                    android:alpha=".5"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                    android:layout_gravity="end|center_vertical"
+                    app:layout_collapseMode="pin"/>
 
                 <com.google.android.material.appbar.MaterialToolbar
                     android:id="@+id/toolbar"
